# CppErr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: avoid_error.cpp  basic.cpp  error_concatenation.cpp  result.cpp  type_checking.cpp
include/CppErr/: Error.h  ErrorMessage.h  ErrorType.h  Result.h
src/CppErr/: Error.cpp  ErrorMessage.cpp  Result.cpp
test/: CMakeLists.txt  ErrorTest.cpp  ErrorTypeTest.cpp  ResultTest.cpp  basicErrorObjectsOperations.cpp  errorTypes.cpp  test.cpp  test.h  zbeub.cpp
